--- a/Lab11_Sqlite/Base.lproj/Main.storyboard
+++ b/Lab11_Sqlite/Base.lproj/Main.storyboard
@@ -50,13 +50,12 @@
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="courseId" destination="aqe-M4-IQ4" id="pkU-SD-H0b"/>
                         <outlet property="courseName" destination="qqe-nw-LRM" id="Cnc-S8-1sk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TeN-oq-qZ0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="313.5" y="1286.5"/>
+            <point key="canvasLocation" x="772.5" y="1286.5"/>
         </scene>
         <!--In Course-->
         <scene sceneID="DKE-3m-5KP">
@@ -106,7 +105,7 @@
         <!--Add a Student-->
         <scene sceneID="Hdz-hC-TrD">
             <objects>
-                <viewController id="ehx-uS-OJU" sceneMemberID="viewController">
+                <viewController id="ehx-uS-OJU" customClass="AddStudentController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="r34-AE-gmz"/>
                         <viewControllerLayoutGuide type="bottom" id="OAr-V7-FYb"/>
@@ -154,11 +153,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c0R-hK-YSq">
-                                <rect key="frame" x="134" y="167" width="154" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Add course:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5p5-G8-ArM">
                                 <rect key="frame" x="20" y="290" width="94" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -175,14 +169,33 @@
                                 <state key="normal" title="Add">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="addACourse:" destination="ehx-uS-OJU" eventType="touchUpInside" id="Jxu-q1-BdP"/>
+                                </connections>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c0R-hK-YSq">
+                                <rect key="frame" x="134" y="168" width="154" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Add a Student" id="XOq-6E-QsR">
-                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="aIf-A4-ZGj"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="aIf-A4-ZGj">
+                            <connections>
+                                <action selector="addStudent:" destination="ehx-uS-OJU" id="inc-GK-epT"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="addCourseName" destination="EXX-AS-0ka" id="iNB-44-KMO"/>
+                        <outlet property="studentEmail" destination="XN6-h8-zVT" id="8Wn-ji-NNY"/>
+                        <outlet property="studentId" destination="59M-bG-P0c" id="G0I-se-oDU"/>
+                        <outlet property="studentMajor" destination="c0R-hK-YSq" id="MlU-2h-W7K"/>
+                        <outlet property="studentName" destination="DZu-sh-Zna" id="SSf-qe-ckJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NEo-oU-Rvb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -271,12 +284,18 @@
                                 <state key="normal" title="Drop">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="dropCourse:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cj7-uI-iqT"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IRN-ee-ubZ">
                                 <rect key="frame" x="325" y="453" width="30" height="30"/>
                                 <state key="normal" title="Add">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="addCourse:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VTE-WK-be8"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vkO-qe-nqT">
                                 <rect key="frame" x="139" y="549" width="115" height="30"/>
